[project]
name = "qhybrid"
version = "0.1.0"
description = "Quantum + Classical Hybrid Simulator (QHybrid) for running hybrid quantum algorithms with Qiskit, Cirq, and Python."
authors = [
    { name = "SadiqHash", email = "saddeequjp@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["quantum", "hybrid", "Qiskit", "Cirq", "VQE", "quantum-computing"]

[project.urls]
"Homepage" = "https://github.com/SadiqHash/Qhybrid"
"Repository" = "https://github.com/SadiqHash/Qhybrid"

[project.dependencies]
qiskit = "^0.45.0"
cirq = "^1.3.0"
numpy = "^1.26.0"
matplotlib = "^3.8.0"

[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
